--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "private": true,
     "scripts": {
-        "start": "parcel index.html",
-        "build": "parcel build index.html"
+        "start": "rm -rf .parcel-cache && parcel index.html",
+        "build": "rm -rf dist && parcel build --public-url 'elm-hacker-news/' index.html",
+        "postbuild": "mkdir -p dist/elm-hacker-news && mv dist/*.{png,css,js,map} dist/elm-hacker-news/",
+        "gh-pages": "npm run build && echo 'running gh-pages...' && gh-pages -d dist"
     },
     "devDependencies": {
         "@parcel/transformer-elm": "^2.4.0",
         "@parcel/transformer-sass": "^2.4.0",
-        "elm": "^0.19.1-5"
+        "elm": "^0.19.1-5",
+        "gh-pages": "^4.0.0"
     }
 }
