--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "trailingComma": "all",
     "semi": false,
-    "arrowParens": "always"
+    "arrowParens": "always",
+    "singleQuote": true
 }
